--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "coinkey": "^3.0.0",
     "discord.js": "^12.5.3",
+    "ethers": "^5.5.2",
     "latest-tweets": "^1.0.4",
     "node-fetch": "^2.6.1",
     "puppeteer": "^10.4.0",
