--- a/config.json
+++ b/config.json
@@ -2,5 +2,5 @@
     "prefix": "!",
     "token": "your bot token",
     "activityType": "WATCHING",
-    "activity": "!help"
+    "activity": "Stacking Ws"
 }
