--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Discord bot for everything",
   "main": "start.js",
   "dependencies": {
+    "axios": "^0.24.0",
     "coinkey": "^3.0.0",
     "discord.js": "^12.5.3",
     "ethers": "^5.5.2",
