--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "start.js",
   "dependencies": {
     "axios": "^0.24.0",
+    "cheerio": "^1.0.0-rc.11",
     "coinkey": "^3.0.0",
     "discord.js": "^12.5.3",
     "ethers": "^5.5.2",
